# vectorlib

./: Cargo.toml  README.md
docs/: Legacy_code.md
src/: lib.rs  main.rs
src/math/: mod.rs  vector2d_module.rs  vector2d_verbose_module.rs
src/test/: tests.rs
